change logic for t&c

--- a/app/blocks/composite-tab/composite-tab.pug
+++ b/app/blocks/composite-tab/composite-tab.pug
@@ -1,17 +1,22 @@
-mixin composite-tab(data)
+mixin composite-tab()
   +b.composite-tab&attributes(attributes)
-    +e.checkbox(data-composite-checkbox)
-      +b.LABEL.checkbox_sm-small._notext
-        block
-    +e.button
-      +e.content
-        if data.box
-          +box()(class=data.box + ' __box hide-from-sm')
-        if data.title
-          +e.title!=data.title
-        if data.save
-          +e.saved
-            +e.text Saved
-            +icon('check').__check
-        if data.plus
-          +icon('plus').__plus
+    block
+
+mixin composite-tab-checkbox()
+  +e.checkbox&attributes(attributes)
+    +b.LABEL.checkbox_sm-small._notext
+      block
+
+mixin composite-tab-button(data)
+  +e.button&attributes(attributes)
+    +e.content
+      if data.box
+        +box()(class=data.box + ' __box hide-from-sm')
+      if data.title
+        +e.title!=data.title
+      if data.save
+        +e.saved
+          +e.text Saved
+          +icon('check').__check
+      if data.plus
+        +icon('plus').__plus
