--- a/app/blocks/form-panel/form-panel.scss
+++ b/app/blocks/form-panel/form-panel.scss
@@ -54,6 +54,13 @@
     }
   }
 
+  &__buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
   &__button {
     &_wide {
       min-width: 298px;
@@ -68,6 +75,12 @@
 
       @include screen('sm') {
         min-width: 0;
+      }
+    }
+
+    &_smfull {
+      @include screen('sm') {
+        width: 100%;
       }
     }
   }
