--- a/app/blocks/composite-tab/composite-tab.scss
+++ b/app/blocks/composite-tab/composite-tab.scss
@@ -7,11 +7,12 @@
   border-left: 1px solid $color-border-light;
   position: relative;
   height: 70px;
+  pointer-events: none;
 
   @include screen('sm') {
     height: 50px;
     border-radius: 2px;
-    border: 1px solid $color-basic;
+    border: none;
   }
 
   &:first-child {
@@ -31,16 +32,11 @@
     }
   }
 
-  &.is-disabled {
-    @include screen('sm') {
-      border-color: $color-border-light;
-    }
-  }
-
   &__checkbox {
     position: absolute;
     top: 9px;
     left: 11px;
+    pointer-events: auto;
 
     @include screen('sm') {
       top: 5px;
@@ -69,7 +65,7 @@
       text-transform: uppercase;
     }
 
-    #{$b}.is-disabled & {
+    #{$b}__button.is-disabled & {
       color: $color-border-light;
 
       @include screen('sm') {
@@ -99,7 +95,7 @@
       margin: 0 9px;
     }
 
-    #{$b}.is-saved & {
+    #{$b}__button.is-saved & {
       display: inline-flex;
     }
   }
@@ -142,7 +138,7 @@
       margin: 0 10px;
     }
 
-    #{$b}.is-saved &, #{$b}.is-disabled & {
+    #{$b}__button.is-saved &, #{$b}__button.is-disabled & {
       @include screen('sm') {
         display: none;
       }
@@ -171,6 +167,7 @@
     cursor: pointer;
     transition: box-shadow $ease-main;
     box-shadow: inset 0 -1px 0 $color-border-light;
+    pointer-events: auto;
 
     @media only screen and (max-width: 1200px) {
       padding: 25px 20px 10px;
@@ -184,6 +181,7 @@
     @include screen('sm') {
       padding: 25px 9px 5px;
       box-shadow: none;
+      border: 1px solid $color-basic;
     }
 
     #{$b}_orange & {
@@ -191,6 +189,14 @@
 
       @include screen('sm') {
         box-shadow: none;
+      }
+
+      &.is-active, &:hover {
+        box-shadow: inset 0 -6px 0 $color-hot-desk;
+
+        @include screen('sm') {
+          box-shadow: none;
+        }
       }
     }
 
@@ -200,6 +206,14 @@
       @include screen('sm') {
         box-shadow: none;
       }
+
+      &.is-active, &:hover {
+        box-shadow: inset 0 -6px 0 $color-dedicated-desk;
+
+        @include screen('sm') {
+          box-shadow: none;
+        }
+      }
     }
 
     #{$b}_blue & {
@@ -207,6 +221,14 @@
 
       @include screen('sm') {
         box-shadow: none;
+      }
+
+      &.is-active,&:hover {
+        box-shadow: inset 0 -6px 0 $color-meeting-room;
+
+        @include screen('sm') {
+          box-shadow: none;
+        }
       }
     }
 
@@ -216,42 +238,22 @@
       @include screen('sm') {
         box-shadow: none;
       }
-    }
 
-    #{$b}_orange.is-active &, #{$b}_orange:hover:not(.is-disabled) & {
-      box-shadow: inset 0 -6px 0 $color-hot-desk;
+      &.is-active,&:hover {
+        box-shadow: inset 0 -6px 0 $color-office-space;
 
-      @include screen('sm') {
-        box-shadow: none;
+        @include screen('sm') {
+          box-shadow: none;
+        }
       }
     }
 
-    #{$b}_red.is-active &, #{$b}_red:hover:not(.is-disabled) & {
-      box-shadow: inset 0 -6px 0 $color-dedicated-desk;
-
-      @include screen('sm') {
-        box-shadow: none;
-      }
-    }
-
-    #{$b}_blue.is-active &, #{$b}_blue:hover:not(.is-disabled) & {
-      box-shadow: inset 0 -6px 0 $color-meeting-room;
-
-      @include screen('sm') {
-        box-shadow: none;
-      }
-    }
-
-    #{$b}_green.is-active &, #{$b}_green:hover:not(.is-disabled) & {
-      box-shadow: inset 0 -6px 0 $color-office-space;
-
-      @include screen('sm') {
-        box-shadow: none;
-      }
-    }
-
-    #{$b}.is-disabled & {
+    &.is-disabled {
       pointer-events: none;
+
+      @include screen('sm') {
+        border-color: $color-border-light;
+      }
     }
   }
 }
