--- a/app/pages/space/space.pug
+++ b/app/pages/space/space.pug
@@ -78,8 +78,8 @@ block content
                     +e.status
                       +e.buttons
                         +button-heart._gray._small.__button._heart.js-heart.hide-sm
-                        +button('a')._thin-border._thin-border_smaller._smaller.__button Arrange a viewing
-                        +button('a')._smaller.__button Request Reservation
+                        +button('a')._thin-border._thin-border_smaller._smaller.__button(href="#") Arrange a viewing
+                        +button('a')._smaller.__button(href="#") Request Reservation
                       +e.available AVIALABLE NOW
                     +content-zone._small.__content
                       h4 Hot desk with Workshops Floor 6
@@ -101,8 +101,8 @@ block content
                     +e.status
                       +e.buttons
                         +button-heart._gray._small.__button._heart.js-heart.hide-sm
-                        +button('a')._thin-border._thin-border_smaller._smaller.__button Arrange a viewing
-                        +button('a')._smaller.__button Request Reservation
+                        +button('a')._thin-border._thin-border_smaller._smaller.__button(href="#") Arrange a viewing
+                        +button('a')._smaller.__button(href="#") Request Reservation
                       +e.available AVIALABLE NOW
                     +content-zone._small.__content
                       h4 Hot desk with Workshops Floor 7
@@ -124,8 +124,8 @@ block content
                     +e.status
                       +e.buttons
                         +button-heart._gray._small.__button._heart.js-heart.hide-sm
-                        +button('a')._thin-border._thin-border_smaller._smaller.__button Arrange a viewing
-                        +button('a')._smaller.__button Request Reservation
+                        +button('a')._thin-border._thin-border_smaller._smaller.__button(href="#") Arrange a viewing
+                        +button('a')._smaller.__button(href="#") Request Reservation
                       +e.available AVIALABLE FROM:&nbsp;
                         b 6 July 2019
                     +content-zone._small.__content
@@ -150,8 +150,8 @@ block content
                     +e.status
                       +e.buttons
                         +button-heart._gray._small.__button._heart.js-heart.hide-sm
-                        +button('a')._thin-border._thin-border_smaller._smaller.__button Arrange a viewing
-                        +button('a')._smaller.__button Request Reservation
+                        +button('a')._thin-border._thin-border_smaller._smaller.__button(href="#") Arrange a viewing
+                        +button('a')._smaller.__button(href="#") Request Reservation
                       +e.available NOT AVAILABLE
                     +content-zone._small.__content
                       h4 Hot desk with Workshops Floor 6
@@ -167,8 +167,8 @@ block content
                     +e.status
                       +e.buttons
                         +button-heart._gray._small.__button._heart.js-heart.hide-sm
-                        +button('a')._thin-border._thin-border_smaller._smaller.__button Arrange a viewing
-                        +button('a')._smaller.__button Request Reservation
+                        +button('a')._thin-border._thin-border_smaller._smaller.__button(href="#") Arrange a viewing
+                        +button('a')._smaller.__button(href="#") Request Reservation
                       +e.available AVIALABLE NOW
                     +content-zone._small.__content
                       h4 Hot desk with Workshops Floor 6
@@ -186,8 +186,8 @@ block content
                     +e.status
                       +e.buttons
                         +button-heart._gray._small.__button._heart.js-heart.hide-sm
-                        +button('a')._thin-border._thin-border_smaller._smaller.__button Arrange a viewing
-                        +button('a')._smaller.__button Request Reservation
+                        +button('a')._thin-border._thin-border_smaller._smaller.__button(href="#") Arrange a viewing
+                        +button('a')._smaller.__button(href="#") Request Reservation
                       +e.available AVIALABLE NOW
                     +content-zone._small.__content
                       h4 Hot desk with Workshops Floor 6
@@ -205,8 +205,8 @@ block content
                     +e.status
                       +e.buttons
                         +button-heart._gray._small.__button._heart.js-heart.hide-sm
-                        +button('a')._thin-border._thin-border_smaller._smaller.__button Arrange a viewing
-                        +button('a')._smaller.__button Request Reservation
+                        +button('a')._thin-border._thin-border_smaller._smaller.__button(href="#") Arrange a viewing
+                        +button('a')._smaller.__button(href="#") Request Reservation
                       +e.available NOT AVAILABLE
                     +content-zone._small.__content
                       h4 Hot desk with Workshops Floor 6
