update logic for t&c

--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -56,6 +56,7 @@
     padding: 8px 57px;
     z-index: 1;
     border-radius: 21px;
+    pointer-events: none;
 
     @include screen('sm') {
       padding: 8px 22px;
@@ -74,6 +75,7 @@
     line-height: 0;
     z-index: 3;
     fill: currentColor;
+    pointer-events: none;
 
     &_preview {
       width: 15px;
