--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -1459,6 +1459,14 @@
       }
     }
 
+    &.is-freeze {
+      @include screen('sm', min) {
+        display: block;
+        opacity: .5;
+        pointer-events: none;
+      }
+    }
+
     &-cross {
       position: absolute;
       top: 0;
