--- a/app/components/popup-invoices/popup-invoices.pug
+++ b/app/components/popup-invoices/popup-invoices.pug
@@ -19,7 +19,7 @@ mixin popup-invoices()
           td.table__cell 30 Apr 2019
           td.table__cell.table__cell_bold 1568.00 &pound;
           td.table__cell.table__cell_bold
-            +button()._smaller._fz17._wide(href="#") Pay now
+            +button()._smaller._fz17._wide.js-popup(href="#popup-payment-form" data-stoppropagation) Pay now
         - for (var i = 0; i < 9; i++) {
           tr.table__row.table__row_interactive.js-popup-depends-width(data-source="xl:#popup-invoice,md:#popup-invoice-mobile")
             td.table__cell
