--- a/app/components/popup-reminder-empty/popup-reminder-empty.pug
+++ b/app/components/popup-reminder-empty/popup-reminder-empty.pug
@@ -4,26 +4,26 @@ mixin popup-reminder-empty()
       +offer-info(data-popup-element="offerHD")
         +box._big2._orange
         +e.title_dark._fz24 HOT DESK
-      +offer-info(data-popup-element="offerFD")
+      +offer-info(data-popup-element="offerFD" class="hide")
         +box._big2._red
         +e.title_dark._fz24 FIXED DESK
-      +offer-info(data-popup-element="offerMR")
+      +offer-info(data-popup-element="offerMR" class="hide")
         +box._big2._blue
         +e.title_dark._fz24 MEETING ROOM
-      +offer-info(data-popup-element="offerOS")
+      +offer-info(data-popup-element="offerOS" class="hide")
         +box._big2._green
         +e.title_dark._fz24 OFFICE SPACE
       +popup-title.popup__title_mfz12 Terms and conditions
     +popup-content
       +note-exclamation()._fw400._color._fz20.__note Ooops! Looks like you forgot something
       +note(true)._fz30._sm-pmg.__notice
-        p You have activated the <span data-popup-element="offerHD">HOT DESK</span><span data-popup-element="offerFD">FIXED DESK</span><span data-popup-element="offerMR">MEETING ROOM</span><span data-popup-element="offerOS">OFFICE SPACE</span> service, but have not added any Terms and Conditions.
+        p You have activated the <span data-popup-element="offerHD">HOT DESK</span><span data-popup-element="offerFD" class="hide">FIXED DESK</span><span data-popup-element="offerMR" class="hide">MEETING ROOM</span><span data-popup-element="offerOS" class="hide">OFFICE SPACE</span> service, but have not added any Terms and Conditions.
         p Please choose an option in order to continue:
       +e.buttons
         +button('button')._short._border._border_bg-white._mob-smaller.__button(type="button" data-composite-disable)
-          span.hide-sm Continue without <span data-popup-element="offerHD">Hot desks</span><span data-popup-element="offerFD">Fixed desks</span><span data-popup-element="offerMR">Meeting rooms</span><span data-popup-element="offerOS">Office spaces</span> offers
-          span.hide-from-sm Continue without <span data-popup-element="offerHD">HOT DESKS</span><span data-popup-element="offerFD">FIXED DESKS</span><span data-popup-element="offerMR">MEETING ROOMS</span><span data-popup-element="offerOS">OFFICE SPACES</span>
+          span.hide-sm Continue without <span data-popup-element="offerHD">Hot desks</span><span data-popup-element="offerFD" class="hide">Fixed desks</span><span data-popup-element="offerMR" class="hide">Meeting rooms</span><span data-popup-element="offerOS">Office spaces</span> offers
+          span.hide-from-sm Continue without <span data-popup-element="offerHD">HOT DESKS</span><span data-popup-element="offerFD" class="hide">FIXED DESKS</span><span data-popup-element="offerMR" class="hide">MEETING ROOMS</span><span data-popup-element="offerOS" class="hide">OFFICE SPACES</span>
         +button('button')._short._mob-smaller.__button(type="button" data-fancybox-close)
           span.hide-sm Add Terms and Conditions
-          span.hide-from-sm Add T&C for <span data-popup-element="offerHD">HOT DESK</span><span data-popup-element="offerFD">FIXED DESK</span><span data-popup-element="offerMR">MEETING ROOM</span><span data-popup-element="offerOS">OFFICE SPACE</span>
+          span.hide-from-sm Add T&C for <span data-popup-element="offerHD">HOT DESK</span><span data-popup-element="offerFD" class="hide">FIXED DESK</span><span data-popup-element="offerMR" class="hide">MEETING ROOM</span><span data-popup-element="offerOS" class="hide">OFFICE SPACE</span>
       block
