--- a/app/pages/deal-passport/deal-passport-state2.pug
+++ b/app/pages/deal-passport/deal-passport-state2.pug
@@ -69,3 +69,4 @@ block popups
   +popup-invoice#popup-invoice
   +popup-invoice-mobile#popup-invoice-mobile
   +popup-cancellation#popup-cancellation
+  +popup-payment-form#popup-payment-form
