--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -69,6 +69,9 @@ block content
         +link.js-popup(href="#popup-reminder-empty") Popup empty terms and conditions
         +link(href="#popup-reminder-save").js-popup Popup save terms and conditions
         +link(href="#popup-add-offer-tc").js-popup Popup Add rental offer with terms and conditins for one offer
+        +link.js-popup(href="#popup-reminder-empty") Popup empty terms and conditions
+        +link(href="#popup-reminder-save").js-popup Popup save terms and conditions
+        //- +link(href="#popup-payment-form").js-popup Popup payment form
 
 block panels
   +main-menu
@@ -103,6 +106,7 @@ block popups
   +popup-invoice#popup-invoice
   +popup-invoice-mobile#popup-invoice-mobile
   +popup-cancellation#popup-cancellation
+  +popup-add-offer-tc#popup-add-offer-tc
   +popup-reminder-empty#popup-reminder-empty
   +popup-reminder-save#popup-reminder-save
-  +popup-add-offer-tc#popup-add-offer-tc
+  //- +popup-payment-form#popup-payment-form
