--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -174,6 +174,7 @@ include ../components/popup-invoice/popup-invoice
 include ../components/popup-invoices/popup-invoices
 include ../components/popup-order-summary/popup-order-summary
 include ../components/popup-password-change/popup-password-change
+include ../components/popup-payment-form/popup-payment-form
 include ../components/popup-reminder-empty/popup-reminder-empty
 include ../components/popup-reminder-save/popup-reminder-save
 include ../components/popup-signin/popup-signin
