--- a/app/pages/new-space/new-space-step8.pug
+++ b/app/pages/new-space/new-space-step8.pug
@@ -52,7 +52,7 @@ block content
                       +e.INPUT.input(name="typeOffer", value="hd", type="checkbox" data-composite-activator="offerHD")
                       +e.SPAN.box
                         +icon('check').__icon
-                    +composite-tab-button({title: 'Hot Desk', box: '_orange _size11', plus: true, save: true})(data-composite-el="offerHD" data-src="#popup-reminder-save")
+                    +composite-tab-button({title: 'Hot Desk', box: '_orange _size11', plus: true, save: true}).is-disabled(data-composite-el="offerHD" data-src="#popup-reminder-save")
                   +composite-tab()._red.__item
                     +composite-tab-checkbox()(data-composite-checkbox)
                       +e.INPUT.input(name="typeOffer", value="fd", type="checkbox" data-composite-activator="offerFD")
