--- a/app/pages/new-space/new-space-step8.pug
+++ b/app/pages/new-space/new-space-step8.pug
@@ -52,25 +52,25 @@ block content
                       +e.INPUT.input(name="typeOffer", value="hd", type="checkbox" data-composite-activator="offerHD")
                       +e.SPAN.box
                         +icon('check').__icon
-                    +composite-tab-button({title: 'Hot Desk', box: '_orange _size11', plus: true, save: true}).is-disabled(data-composite-el="offerHD" data-src="#popup-reminder-save")
+                    +composite-tab-button({title: 'Hot Desk', box: '_orange _size11', plus: true, save: true}).is-disabled(data-composite-el="offerHD" data-src-save="#popup-reminder-save" data-src-empty="#popup-reminder-empty")
                   +composite-tab()._red.__item
                     +composite-tab-checkbox()(data-composite-checkbox)
                       +e.INPUT.input(name="typeOffer", value="fd", type="checkbox" data-composite-activator="offerFD")
                       +e.SPAN.box
                         +icon('check').__icon
-                    +composite-tab-button({title: 'Fixed desk', box: '_red _size11', plus: true, save: true}).is-disabled(data-composite-el="offerFD" data-src="#popup-reminder-save")
+                    +composite-tab-button({title: 'Fixed desk', box: '_red _size11', plus: true, save: true}).is-disabled(data-composite-el="offerFD" data-src-save="#popup-reminder-save" data-src-empty="#popup-reminder-empty")
                   +composite-tab()._blue.__item
                     +composite-tab-checkbox()(data-composite-checkbox)
                       +e.INPUT.input(name="typeOffer", value="mr", type="checkbox" data-composite-activator="offerMR")
                       +e.SPAN.box
                         +icon('check').__icon
-                    +composite-tab-button({title: 'Meeting room', box: '_blue _size11', plus: true, save: true}).is-disabled(data-composite-el="offerMR" data-src="#popup-reminder-save")
+                    +composite-tab-button({title: 'Meeting room', box: '_blue _size11', plus: true, save: true}).is-disabled(data-composite-el="offerMR" data-src-save="#popup-reminder-save" data-src-empty="#popup-reminder-empty")
                   +composite-tab()._green.__item
                     +composite-tab-checkbox()(data-composite-checkbox)
                       +e.INPUT.input(name="typeOffer", value="os", type="checkbox" data-composite-activator="offerOS")
                       +e.SPAN.box
                         +icon('check').__icon
-                    +composite-tab-button({title: 'Office space', box: '_green _size11', plus: true, save: true}).is-disabled(data-composite-el="offerOS" data-src="#popup-reminder-save")
+                    +composite-tab-button({title: 'Office space', box: '_green _size11', plus: true, save: true}).is-disabled(data-composite-el="offerOS" data-src-save="#popup-reminder-save" data-src-empty="#popup-reminder-empty")
               +form-section
                 +e.FIELDSET.modal.is-freeze(data-composite-target="offerHD")
                   +e.modal-top
