--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -295,6 +295,11 @@
       height: 17px;
     }
 
+    &_card {
+      width: 24px;
+      height: 19px;
+    }
+
     #{$b}_no-shadow & {
       filter: none;
     }
