--- a/app/blocks/popups/popups.scss
+++ b/app/blocks/popups/popups.scss
@@ -578,8 +578,8 @@
   &_combined {
     position: relative;
     display: block;
-    max-height: 100%;
     background-color: $color-bg;
+    overflow: visible;
 
     @include screen('md') {
       width: 100%;
@@ -592,7 +592,6 @@
       &__content {
         position: relative;
         display: flex;
-        max-height: 100%;
         padding: 0;
         z-index: 1;
 
@@ -600,6 +599,20 @@
           height: 100%;
           max-height: none;
         }
+      }
+
+      &__scrollblock {
+        @include screen('md') {
+          height: 100%;
+        }
+
+        // .os-content {
+        //   height: auto !important;
+
+        //   @include screen('md') {
+        //     height: 100% !important;
+        //   }
+        // }
       }
 
       &__header {
